// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandableList /> should render with a Item 1`] = `
.c0 {
  padding: 10px 5px;
}

.c1 {
  font-size: 14px;
  line-height: 20px;
}

.c1 label {
  min-height: 20px;
  margin-bottom: 2px;
  margin-right: 5px;
}

.c1 label * {
  cursor: pointer;
}

.c2 {
  display: inline-block;
  width: 20px;
  margin-right: 5px;
}

.c3.fa-stack {
  cursor: pointer;
  font-size: 1.4em;
  line-height: 20px;
  width: 1em;
  height: 1em;
  vertical-align: text-top;
}

.c3.fa-stack:hover [class*="fa-"] {
  color: #702785;
  opacity: 1;
}

.c3 [class*="fa-"]:first-child {
  opacity: 0;
}

.c3 [class*="fa-"]:first-child ~ [class*="fa-"]:hover {
  color: #fff;
}

.c4 {
  font-size: 14px;
}

.c5 {
  border: 0;
  padding: 0;
  text-align: left;
  background: transparent;
}

.c6 {
  border-left: 1px #e6e6e6 solid;
  margin-left: 35px;
  margin-top: 10px;
  padding-left: 5px;
}

<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={false}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <ExpandableListItem__ItemWrap
        padded={true}
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "ExpandableListItem__ItemWrap-sc-10hsq3a-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  [Function],
                ],
              },
              "displayName": "ExpandableListItem__ItemWrap",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "ExpandableListItem__ItemWrap-sc-10hsq3a-0",
              "target": "li",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          padded={true}
        >
          <li
            className="c0"
          >
            <ExpandableListItem__Container>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "ExpandableListItem__Container-sc-10hsq3a-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "font-size:14px;line-height:20px;label{min-height:20px;margin-bottom:2px;margin-right:5px;*{cursor:pointer;}}",
                      ],
                    },
                    "displayName": "ExpandableListItem__Container",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "ExpandableListItem__Container-sc-10hsq3a-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <Checkbox
                    bsClass="checkbox"
                    checked={false}
                    disabled={false}
                    inline={true}
                    inputRef={[Function]}
                    onChange={[MockFunction]}
                    title=""
                  >
                    <label
                      className="checkbox-inline"
                      title=""
                    >
                      <input
                        checked={false}
                        disabled={false}
                        onChange={[MockFunction]}
                        type="checkbox"
                      />
                    </label>
                  </Checkbox>
                  <ExpandableListItem__Toggle>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "ExpandableListItem__Toggle-sc-10hsq3a-2",
                            "isStatic": false,
                            "lastClassName": "c2",
                            "rules": Array [
                              "display:inline-block;width:20px;margin-right:5px;",
                            ],
                          },
                          "displayName": "ExpandableListItem__Toggle",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "ExpandableListItem__Toggle-sc-10hsq3a-2",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <div
                        className="c2"
                      >
                        <ExpandableListItem__IconStack
                          className="fa-stack"
                          onClick={[Function]}
                          tabIndex={0}
                        >
                          <StyledComponent
                            className="fa-stack"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "ExpandableListItem__IconStack-sc-10hsq3a-3",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "ExpandableListItem__IconStack",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "ExpandableListItem__IconStack-sc-10hsq3a-3",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              className="c3 fa-stack"
                              onClick={[Function]}
                              tabIndex={0}
                            >
                              <Icon
                                className="fa-stack-1x"
                                name="circle"
                              >
                                <FontAwesomeIcon
                                  className="fa-stack-1x"
                                  icon={
                                    Object {
                                      "iconName": "circle",
                                      "prefix": "fas",
                                    }
                                  }
                                >
                                  <svg
                                    className="svg-inline--fa fa-circle"
                                  />
                                </FontAwesomeIcon>
                              </Icon>
                              <Icon
                                className="fa-stack-1x"
                                name="angle-up"
                              >
                                <FontAwesomeIcon
                                  className="fa-stack-1x"
                                  icon={
                                    Object {
                                      "iconName": "angle-up",
                                      "prefix": "fas",
                                    }
                                  }
                                >
                                  <svg
                                    className="svg-inline--fa fa-angle-up"
                                  />
                                </FontAwesomeIcon>
                              </Icon>
                            </div>
                          </StyledComponent>
                        </ExpandableListItem__IconStack>
                      </div>
                    </StyledComponent>
                  </ExpandableListItem__Toggle>
                  <ExpandableListItem__HeaderWrap
                    className="header"
                  >
                    <StyledComponent
                      className="header"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "ExpandableListItem__HeaderWrap-sc-10hsq3a-4",
                            "isStatic": false,
                            "lastClassName": "c4",
                            "rules": Array [
                              "font-size:14px;",
                            ],
                          },
                          "displayName": "ExpandableListItem__HeaderWrap",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "ExpandableListItem__HeaderWrap-sc-10hsq3a-4",
                          "target": "span",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <span
                        className="c4 header"
                      >
                        <ExpandableListItem__Header
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "ExpandableListItem__Header-sc-10hsq3a-5",
                                  "isStatic": false,
                                  "lastClassName": "c5",
                                  "rules": Array [
                                    "border:0;padding:0;text-align:left;background:transparent;",
                                  ],
                                },
                                "displayName": "ExpandableListItem__Header",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "ExpandableListItem__Header-sc-10hsq3a-5",
                                "target": "button",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <button
                              className="c5"
                              onClick={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              Wheel of time
                            </button>
                          </StyledComponent>
                        </ExpandableListItem__Header>
                      </span>
                    </StyledComponent>
                  </ExpandableListItem__HeaderWrap>
                </div>
              </StyledComponent>
            </ExpandableListItem__Container>
            <ExpandableListItem__ExpandableContent>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "ExpandableListItem__ExpandableContent-sc-10hsq3a-7",
                      "isStatic": false,
                      "lastClassName": "c6",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "ExpandableListItem__ExpandableContent",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "ExpandableListItem__ExpandableContent-sc-10hsq3a-7",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c6"
                />
              </StyledComponent>
            </ExpandableListItem__ExpandableContent>
          </li>
        </StyledComponent>
      </ExpandableListItem__ItemWrap>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with a nested ExpandableList 1`] = `
.c0 {
  padding: 10px 5px;
}

.c1 {
  font-size: 14px;
  line-height: 20px;
}

.c1 label {
  min-height: 20px;
  margin-bottom: 2px;
  margin-right: 5px;
}

.c1 label * {
  cursor: pointer;
}

.c2 {
  display: inline-block;
  width: 20px;
  margin-right: 5px;
}

.c3.fa-stack {
  cursor: pointer;
  font-size: 1.4em;
  line-height: 20px;
  width: 1em;
  height: 1em;
  vertical-align: text-top;
}

.c3.fa-stack:hover [class*="fa-"] {
  color: #702785;
  opacity: 1;
}

.c3 [class*="fa-"]:first-child {
  opacity: 0;
}

.c3 [class*="fa-"]:first-child ~ [class*="fa-"]:hover {
  color: #fff;
}

.c4 {
  font-size: 14px;
}

.c5 {
  border: 0;
  padding: 0;
  text-align: left;
  background: transparent;
}

.c6 {
  border-left: 1px #e6e6e6 solid;
  margin-left: 35px;
  margin-top: 10px;
  padding-left: 5px;
}

<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={true}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <ExpandableListItem__ItemWrap
        padded={true}
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "ExpandableListItem__ItemWrap-sc-10hsq3a-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  [Function],
                ],
              },
              "displayName": "ExpandableListItem__ItemWrap",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "ExpandableListItem__ItemWrap-sc-10hsq3a-0",
              "target": "li",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          padded={true}
        >
          <li
            className="c0"
          >
            <ExpandableListItem__Container>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "ExpandableListItem__Container-sc-10hsq3a-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "font-size:14px;line-height:20px;label{min-height:20px;margin-bottom:2px;margin-right:5px;*{cursor:pointer;}}",
                      ],
                    },
                    "displayName": "ExpandableListItem__Container",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "ExpandableListItem__Container-sc-10hsq3a-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <Checkbox
                    bsClass="checkbox"
                    checked={false}
                    disabled={false}
                    inline={true}
                    inputRef={[Function]}
                    onChange={[MockFunction]}
                    title=""
                  >
                    <label
                      className="checkbox-inline"
                      title=""
                    >
                      <input
                        checked={false}
                        disabled={false}
                        onChange={[MockFunction]}
                        type="checkbox"
                      />
                    </label>
                  </Checkbox>
                  <ExpandableListItem__Toggle>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "ExpandableListItem__Toggle-sc-10hsq3a-2",
                            "isStatic": false,
                            "lastClassName": "c2",
                            "rules": Array [
                              "display:inline-block;width:20px;margin-right:5px;",
                            ],
                          },
                          "displayName": "ExpandableListItem__Toggle",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "ExpandableListItem__Toggle-sc-10hsq3a-2",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <div
                        className="c2"
                      >
                        <ExpandableListItem__IconStack
                          className="fa-stack"
                          onClick={[Function]}
                          tabIndex={0}
                        >
                          <StyledComponent
                            className="fa-stack"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "ExpandableListItem__IconStack-sc-10hsq3a-3",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "ExpandableListItem__IconStack",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "ExpandableListItem__IconStack-sc-10hsq3a-3",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            onClick={[Function]}
                            tabIndex={0}
                          >
                            <div
                              className="c3 fa-stack"
                              onClick={[Function]}
                              tabIndex={0}
                            >
                              <Icon
                                className="fa-stack-1x"
                                name="circle"
                              >
                                <FontAwesomeIcon
                                  className="fa-stack-1x"
                                  icon={
                                    Object {
                                      "iconName": "circle",
                                      "prefix": "fas",
                                    }
                                  }
                                >
                                  <svg
                                    className="svg-inline--fa fa-circle"
                                  />
                                </FontAwesomeIcon>
                              </Icon>
                              <Icon
                                className="fa-stack-1x"
                                name="angle-down"
                              >
                                <FontAwesomeIcon
                                  className="fa-stack-1x"
                                  icon={
                                    Object {
                                      "iconName": "angle-down",
                                      "prefix": "fas",
                                    }
                                  }
                                >
                                  <svg
                                    className="svg-inline--fa fa-angle-down"
                                  />
                                </FontAwesomeIcon>
                              </Icon>
                            </div>
                          </StyledComponent>
                        </ExpandableListItem__IconStack>
                      </div>
                    </StyledComponent>
                  </ExpandableListItem__Toggle>
                  <ExpandableListItem__HeaderWrap
                    className="header"
                  >
                    <StyledComponent
                      className="header"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "ExpandableListItem__HeaderWrap-sc-10hsq3a-4",
                            "isStatic": false,
                            "lastClassName": "c4",
                            "rules": Array [
                              "font-size:14px;",
                            ],
                          },
                          "displayName": "ExpandableListItem__HeaderWrap",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "ExpandableListItem__HeaderWrap-sc-10hsq3a-4",
                          "target": "span",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <span
                        className="c4 header"
                      >
                        <ExpandableListItem__Header
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "ExpandableListItem__Header-sc-10hsq3a-5",
                                  "isStatic": false,
                                  "lastClassName": "c5",
                                  "rules": Array [
                                    "border:0;padding:0;text-align:left;background:transparent;",
                                  ],
                                },
                                "displayName": "ExpandableListItem__Header",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "ExpandableListItem__Header-sc-10hsq3a-5",
                                "target": "button",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <button
                              className="c5"
                              onClick={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              Wheel of time
                            </button>
                          </StyledComponent>
                        </ExpandableListItem__Header>
                      </span>
                    </StyledComponent>
                  </ExpandableListItem__HeaderWrap>
                </div>
              </StyledComponent>
            </ExpandableListItem__Container>
            <ExpandableListItem__ExpandableContent>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "ExpandableListItem__ExpandableContent-sc-10hsq3a-7",
                      "isStatic": false,
                      "lastClassName": "c6",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "ExpandableListItem__ExpandableContent",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "ExpandableListItem__ExpandableContent-sc-10hsq3a-7",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c6"
                >
                  <ExpandableList>
                    <ul
                      className="list"
                    >
                      <ExpandableListItem
                        checked={false}
                        expandable={true}
                        expanded={false}
                        header="Edmonds Field"
                        indetermined={false}
                        onChange={[MockFunction]}
                        padded={true}
                        selectable={true}
                        stayExpanded={false}
                      >
                        <ExpandableListItem__ItemWrap
                          padded={true}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "ExpandableListItem__ItemWrap-sc-10hsq3a-0",
                                  "isStatic": false,
                                  "lastClassName": "c0",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "ExpandableListItem__ItemWrap",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "ExpandableListItem__ItemWrap-sc-10hsq3a-0",
                                "target": "li",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            padded={true}
                          >
                            <li
                              className="c0"
                            >
                              <ExpandableListItem__Container>
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "ExpandableListItem__Container-sc-10hsq3a-1",
                                        "isStatic": false,
                                        "lastClassName": "c1",
                                        "rules": Array [
                                          "font-size:14px;line-height:20px;label{min-height:20px;margin-bottom:2px;margin-right:5px;*{cursor:pointer;}}",
                                        ],
                                      },
                                      "displayName": "ExpandableListItem__Container",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "ExpandableListItem__Container-sc-10hsq3a-1",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <div
                                    className="c1"
                                  >
                                    <Checkbox
                                      bsClass="checkbox"
                                      checked={false}
                                      disabled={false}
                                      inline={true}
                                      inputRef={[Function]}
                                      onChange={[MockFunction]}
                                      title=""
                                    >
                                      <label
                                        className="checkbox-inline"
                                        title=""
                                      >
                                        <input
                                          checked={false}
                                          disabled={false}
                                          onChange={[MockFunction]}
                                          type="checkbox"
                                        />
                                      </label>
                                    </Checkbox>
                                    <ExpandableListItem__Toggle>
                                      <StyledComponent
                                        forwardedComponent={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "attrs": Array [],
                                            "componentStyle": ComponentStyle {
                                              "componentId": "ExpandableListItem__Toggle-sc-10hsq3a-2",
                                              "isStatic": false,
                                              "lastClassName": "c2",
                                              "rules": Array [
                                                "display:inline-block;width:20px;margin-right:5px;",
                                              ],
                                            },
                                            "displayName": "ExpandableListItem__Toggle",
                                            "foldedComponentIds": Array [],
                                            "render": [Function],
                                            "styledComponentId": "ExpandableListItem__Toggle-sc-10hsq3a-2",
                                            "target": "div",
                                            "toString": [Function],
                                            "warnTooManyClasses": [Function],
                                            "withComponent": [Function],
                                          }
                                        }
                                        forwardedRef={null}
                                      >
                                        <div
                                          className="c2"
                                        >
                                          <ExpandableListItem__IconStack
                                            className="fa-stack"
                                            onClick={[Function]}
                                            tabIndex={0}
                                          >
                                            <StyledComponent
                                              className="fa-stack"
                                              forwardedComponent={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "attrs": Array [],
                                                  "componentStyle": ComponentStyle {
                                                    "componentId": "ExpandableListItem__IconStack-sc-10hsq3a-3",
                                                    "isStatic": false,
                                                    "lastClassName": "c3",
                                                    "rules": Array [
                                                      [Function],
                                                    ],
                                                  },
                                                  "displayName": "ExpandableListItem__IconStack",
                                                  "foldedComponentIds": Array [],
                                                  "render": [Function],
                                                  "styledComponentId": "ExpandableListItem__IconStack-sc-10hsq3a-3",
                                                  "target": "div",
                                                  "toString": [Function],
                                                  "warnTooManyClasses": [Function],
                                                  "withComponent": [Function],
                                                }
                                              }
                                              forwardedRef={null}
                                              onClick={[Function]}
                                              tabIndex={0}
                                            >
                                              <div
                                                className="c3 fa-stack"
                                                onClick={[Function]}
                                                tabIndex={0}
                                              >
                                                <Icon
                                                  className="fa-stack-1x"
                                                  name="circle"
                                                >
                                                  <FontAwesomeIcon
                                                    className="fa-stack-1x"
                                                    icon={
                                                      Object {
                                                        "iconName": "circle",
                                                        "prefix": "fas",
                                                      }
                                                    }
                                                  >
                                                    <svg
                                                      className="svg-inline--fa fa-circle"
                                                    />
                                                  </FontAwesomeIcon>
                                                </Icon>
                                                <Icon
                                                  className="fa-stack-1x"
                                                  name="angle-up"
                                                >
                                                  <FontAwesomeIcon
                                                    className="fa-stack-1x"
                                                    icon={
                                                      Object {
                                                        "iconName": "angle-up",
                                                        "prefix": "fas",
                                                      }
                                                    }
                                                  >
                                                    <svg
                                                      className="svg-inline--fa fa-angle-up"
                                                    />
                                                  </FontAwesomeIcon>
                                                </Icon>
                                              </div>
                                            </StyledComponent>
                                          </ExpandableListItem__IconStack>
                                        </div>
                                      </StyledComponent>
                                    </ExpandableListItem__Toggle>
                                    <ExpandableListItem__HeaderWrap
                                      className="header"
                                    >
                                      <StyledComponent
                                        className="header"
                                        forwardedComponent={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "attrs": Array [],
                                            "componentStyle": ComponentStyle {
                                              "componentId": "ExpandableListItem__HeaderWrap-sc-10hsq3a-4",
                                              "isStatic": false,
                                              "lastClassName": "c4",
                                              "rules": Array [
                                                "font-size:14px;",
                                              ],
                                            },
                                            "displayName": "ExpandableListItem__HeaderWrap",
                                            "foldedComponentIds": Array [],
                                            "render": [Function],
                                            "styledComponentId": "ExpandableListItem__HeaderWrap-sc-10hsq3a-4",
                                            "target": "span",
                                            "toString": [Function],
                                            "warnTooManyClasses": [Function],
                                            "withComponent": [Function],
                                          }
                                        }
                                        forwardedRef={null}
                                      >
                                        <span
                                          className="c4 header"
                                        >
                                          <ExpandableListItem__Header
                                            onClick={[Function]}
                                            tabIndex={0}
                                            type="button"
                                          >
                                            <StyledComponent
                                              forwardedComponent={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "attrs": Array [],
                                                  "componentStyle": ComponentStyle {
                                                    "componentId": "ExpandableListItem__Header-sc-10hsq3a-5",
                                                    "isStatic": false,
                                                    "lastClassName": "c5",
                                                    "rules": Array [
                                                      "border:0;padding:0;text-align:left;background:transparent;",
                                                    ],
                                                  },
                                                  "displayName": "ExpandableListItem__Header",
                                                  "foldedComponentIds": Array [],
                                                  "render": [Function],
                                                  "styledComponentId": "ExpandableListItem__Header-sc-10hsq3a-5",
                                                  "target": "button",
                                                  "toString": [Function],
                                                  "warnTooManyClasses": [Function],
                                                  "withComponent": [Function],
                                                }
                                              }
                                              forwardedRef={null}
                                              onClick={[Function]}
                                              tabIndex={0}
                                              type="button"
                                            >
                                              <button
                                                className="c5"
                                                onClick={[Function]}
                                                tabIndex={0}
                                                type="button"
                                              >
                                                Edmonds Field
                                              </button>
                                            </StyledComponent>
                                          </ExpandableListItem__Header>
                                        </span>
                                      </StyledComponent>
                                    </ExpandableListItem__HeaderWrap>
                                  </div>
                                </StyledComponent>
                              </ExpandableListItem__Container>
                              <ExpandableListItem__ExpandableContent>
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "ExpandableListItem__ExpandableContent-sc-10hsq3a-7",
                                        "isStatic": false,
                                        "lastClassName": "c6",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "ExpandableListItem__ExpandableContent",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "ExpandableListItem__ExpandableContent-sc-10hsq3a-7",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <div
                                    className="c6"
                                  />
                                </StyledComponent>
                              </ExpandableListItem__ExpandableContent>
                            </li>
                          </StyledComponent>
                        </ExpandableListItem__ItemWrap>
                      </ExpandableListItem>
                    </ul>
                  </ExpandableList>
                </div>
              </StyledComponent>
            </ExpandableListItem__ExpandableContent>
          </li>
        </StyledComponent>
      </ExpandableListItem__ItemWrap>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with no children 1`] = `
<ExpandableList>
  <ul
    className="list"
  />
</ExpandableList>
`;
